# find-evil-sift-agent

./: BUILT_WITH.md  CLAUDE.md  LICENSE  README.md  orchestrator.py  parse_evtx_remote.py  pyproject.toml  setup_sift_vm.py
demo/: .gitignore  README.md  build_video.py  capture_session.py  cover.html  cover_3x2.html  make_agent_scene.py  make_slides.py  mcp_session.json  script.json  synth_voxcpm.py
docs/: accuracy_report.md  architecture.html  architecture.md  dataset.md  try-it-out.md
findings/: agent_execution_log.jsonl  findings_report.json
src/sift_mcp/: server.py  ssh_client.py  tools.py
