[project]
name = "sift-agent"
version = "0.1.0"
description = "Autonomous incident response agent using SIFT Workstation via MCP"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "paramiko>=3.0.0",
    "asyncssh>=2.14.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dateutil>=2.9.0",
    "openai>=1.0.0",
]

[project.scripts]
sift-mcp = "sift_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sift_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
